binsard/tests/compile_fail/invalid_len_bytes.rs
use binsard::{Decode, Encode};

#[derive(Encode, Decode)]
struct InvalidLenBytes {
    #[binsard(len_bytes = 3)]
    name: String,
}

fn main() {}

